# video-claw

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  README_P0_Implementation.md  ROADMAP_P0_P3.md  alembic.ini  docker-compose.yml  pyproject.toml  task-summary_2026-06-03_1003.md  task-summary_2026-06-03_1035.md
deploy/: alertmanager.yml  docker-compose.yml  prometheus.yml  workflow_alerts.yml
doc/: AI视频自动生产线_开发计划.md  AI视频自动生产线_开发计划_v2.md  README.md  check_list.md  skill_CEO_LOG_LEAD_SKILL_五段式分层确认稿.md  skill_CEO_LOG_LEAD_SKILL_四级分层设计.md  skill_功能划分与接口草图.md  skill_目录与接口草图.md  真实API联调准备清单.md  视频存储方案分析.md  项目实现分析与操作说明.md  领域驱动自动工作流说明.md
doc/_build/: _file_index.json  _tmp_index_check.js  build_index.py  index.html
doc/design/: API路由与业务逻辑解耦说明.md  Ark视频模型联调说明.md  CEO服务收敛与部门归属调整说明.md  CEO隐身原则与对外接口分层说明.md  CHO公共Agent管理服务说明.md  CIO持久化初始化说明.md  CIO数据层统一说明.md  COO服务职责拆分说明.md  CQO质检回退策略说明.md  HiDream图片资产层接入说明.md  Leader汇报与CEO查询机制.md  Pipeline接口标准化说明.md  README.md  Runtime去平铺化说明.md  (+15 more)
runtime/: README.md
scripts/: .env  .env.example  README.md  check_line_endings.py  commit.ps1  get.cmd  get.ps1  normalize_text_files.py  run_local.ps1
src/: .env.example  Dockerfile  README.md  ceo_console_preview.db  ceo_console_preview_promotion.db  ceo_console_preview_promotion_v2.db  ceo_console_preview_qa.db  ceo_ui.db  ceo_ui.db-journal  ceo_ui_opt.db  ceo_ui_opt2.db  ceo_ui_opt3.db  config.yaml  docker-compose.yml  main.py  preview.db  requirements.txt
tests/: conftest.py  test_p1_p2_features.py  test_p3_autonomy.py  test_trigger_integration.py
(+706 files in other folders)
