[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opc-lobster-workflow"
version = "0.1.0"
description = "Department-oriented workflow orchestration service for the 2026 OPC project."
requires-python = ">=3.11"
dependencies = [
    "aiomysql==0.2.0",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "boto3==1.35.36",
    "celery==5.4.0",
    "fastapi==0.115.0",
    "httpx==0.27.0",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.21.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.17",
    "redis==5.2.0",
    "sqlalchemy==2.0.36",
    "structlog==24.4.0",
    "uvicorn[standard]==0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "departments*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
